:smile_cat: Catnip and yarn images for the toolbelt

--- a/index.html
+++ b/index.html
@@ -12,7 +12,28 @@
   </head>
   <body>
 
-    <h1>Cutest Kitty</h1>
+    <div id="content-wrap" class="center">
+      <h1>cutest kitty</h1>
+      
+      <div class="kitty-container">
+        <img src="media/images/kitty.png">
+      </div>
 
+      <div class="tool-box">
+        <div class="tool-item">
+          <img src="media/images/fish.png">
+        </div>
+
+        <div class="tool-item">
+          <img src="media/images/yarn.png">
+        </div>
+
+        <div class="tool-item">
+          <img src="media/images/catnip.png">
+        </div>
+      </div>
+
+    </div>
+    
   </body>
 </html>
