--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@
       <div class="tool-box">
         <div class="tool-item">
           <img src="media/images/fish.png">
+          <h2 class="tool-item-label">fish</h2>
         </div>
 
         <div class="tool-item">
           <img src="media/images/yarn.png">
+          <h2 class="tool-item-label">yarn</h2>
         </div>
 
         <div class="tool-item">
           <img src="media/images/catnip.png">
+          <h2 class="tool-item-label">catnip</h2>
         </div>
       </div>
 
