:hospital: Static mood-meters

--- a/index.html
+++ b/index.html
@@ -22,17 +22,32 @@
       <div class="tool-box">
         <div class="tool-item">
           <img src="media/images/fish.png">
-          <h2 class="tool-item-label">fish</h2>
+          <h2 class="item-label">fish</h2>
         </div>
 
         <div class="tool-item">
           <img src="media/images/yarn.png">
-          <h2 class="tool-item-label">yarn</h2>
+          <h2 class="item-label">yarn</h2>
         </div>
 
         <div class="tool-item">
           <img src="media/images/catnip.png">
-          <h2 class="tool-item-label">catnip</h2>
+          <h2 class="item-label">catnip</h2>
+        </div>
+      </div>
+
+      <div class="mood-meters">
+        <div class="mood-meter">
+          <h2 class="item-label">happiness</h2>
+          <span class="mood-bar">{||||||||||}</span>
+        </div>
+        <div class="mood-meter">
+          <h2 class="item-label">hunger</h2>
+          <span class="mood-bar">{||||||||||}</span>
+        </div>
+        <div class="mood-meter">
+          <h2 class="item-label">chill</h2>
+          <span class="mood-bar">{||||||||||}</span>
         </div>
       </div>
 
