:barber: Random fur color when kitty is clicked

--- a/index.html
+++ b/index.html
@@ -39,15 +39,24 @@
       <div class="mood-meters">
         <div class="mood-meter">
           <h2 class="item-label">happiness</h2>
-          <span class="mood-bar">{||||||||||}</span>
+          <div class="mood-bar">
+            <div class="mood-level"> &nbsp;</div>
+              {||||||||||}
+          </div>
         </div>
         <div class="mood-meter">
           <h2 class="item-label">hunger</h2>
-          <span class="mood-bar">{||||||||||}</span>
+          <div class="mood-bar">
+            <div class="mood-level"> &nbsp;</div>
+              {||||||||||}
+          </div>
         </div>
         <div class="mood-meter">
           <h2 class="item-label">chill</h2>
-          <span class="mood-bar">{||||||||||}</span>
+          <div class="mood-bar">
+            <div class="mood-level"> &nbsp;</div>
+              {||||||||||}
+          </div>
         </div>
       </div>
 
