:fish: Kitty can nom a fish

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css"/>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
     <script src="js/kitty.js"></script>
 
   </head>
@@ -16,22 +17,22 @@
       <h1>cutest kitty</h1>
       
       <div class="kitty-container">
-        <img src="media/images/kitty.png">
+        <img class="kitty" src="media/images/kitty.png">
       </div>
 
       <div class="tool-box">
         <div class="tool-item">
-          <img src="media/images/fish.png">
+          <img data-tool="fish" src="media/images/fish.png">
           <h2 class="item-label">fish</h2>
         </div>
 
         <div class="tool-item">
-          <img src="media/images/yarn.png">
+          <img data-tool="yarn" src="media/images/yarn.png">
           <h2 class="item-label">yarn</h2>
         </div>
 
         <div class="tool-item">
-          <img src="media/images/catnip.png">
+          <img data-tool="catnip" src="media/images/catnip.png">
           <h2 class="item-label">catnip</h2>
         </div>
       </div>
@@ -40,21 +41,21 @@
         <div class="mood-meter">
           <h2 class="item-label">happiness</h2>
           <div class="mood-bar">
-            <div class="mood-level"> &nbsp;</div>
+            <div data-mood="happiness" class="mood-level"> &nbsp;</div>
               {||||||||||}
           </div>
         </div>
         <div class="mood-meter">
           <h2 class="item-label">hunger</h2>
           <div class="mood-bar">
-            <div class="mood-level"> &nbsp;</div>
+            <div data-mood="hunger" class="mood-level"> &nbsp;</div>
               {||||||||||}
           </div>
         </div>
         <div class="mood-meter">
           <h2 class="item-label">chill</h2>
           <div class="mood-bar">
-            <div class="mood-level"> &nbsp;</div>
+            <div data-mood="chill" class="mood-level"> &nbsp;</div>
               {||||||||||}
           </div>
         </div>
