:floppy_disk: Mood is in localStorage, and new kitty photo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>cutest kitty</h1>
       
       <div class="kitty-container">
-        <img class="kitty" src="media/images/kitty.png">
+        <img class="kitty" src="media/images/kitty-test.png">
       </div>
 
       <div class="tool-box">
